HDS-5165 Scope overflow hidden style of penel to prevent cut off of focused items

--- a/packages/components/src/styles/components/app-side-nav/content.scss
+++ b/packages/components/src/styles/components/app-side-nav/content.scss
@@ -34,7 +34,12 @@
 
 .hds-app-side-nav__content-panel {
   padding: 0 var(--token-app-side-nav-wrapper-padding-horizontal);
-  overflow: hidden; // the panel itself does not need to be scrollable
+
+  // the panel itself should not be scrollable,
+  // applying the style in this way prevents focus rings from being cut off
+  &:not(:has(:focus, .mock-focus)) {
+    overflow: hidden;
+  }
 
   &[aria-hidden="true"] {
     max-height: 0; // prevents hidden panels from causing scrolling
